spacing issues

--- a/styles.scss
+++ b/styles.scss
@@ -72,6 +72,8 @@ body{
     }
 }
 .page-2{
+    min-height: unset!important;
+    padding-bottom: 2rem;
     padding-top: Min(100px, Max(20px, 100/1920*100vw));
     display: flex;
     gap: 2rem;
@@ -110,7 +112,7 @@ body{
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding-bottom: 4rem;
+    padding-bottom: 1rem;
     .page-3-h2{
         @include header;
         .page-3-our-menu{display: inline-block}
@@ -150,7 +152,7 @@ body{
     }
 }
 .page-4{
-    // padding-top: 2rem;
+    padding-top: 2rem;
     border: solid 1px red;
     overflow: hidden;
     display: flex;
